--- a/some cool animals/some_cool_animals.html
+++ b/some cool animals/some_cool_animals.html
@@ -263,6 +263,7 @@ summary {
 <li>Also known as “The Child”</li>
 <li>Likes unfertilised frog eggs &amp; control knobs</li>
 <li>Strong with the force</li>
+<li>Cute</li>
 </ul>
 <hr />
 <p><strong>Disclaimer:</strong> This document is only for R Markdown &amp; GitHub teaching purposes</p>
